clientes login y registro

--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
     <body>
         <h1>CheckAndFood</h1>
         <div class="button-container">
-            <button class="button" onclick="location.href='/clientes'">Clientes</button>
+            <button class="button" onclick="location.href='/login_clientes'">Clientes</button>
             <button class="button" onclick="location.href='/restaurantes'">Restaurantes</button>
         </div>
     </body>
