--- a/templates/registro_clientes.html
+++ b/templates/registro_clientes.html
@@ -43,13 +43,15 @@
 </head>
 <body>
     <h1>Registro de Cliente</h1>
-    <form action="" method="POST">
-        <input type="text" name="nombre" placeholder="Nombre" required>
-        <input type="email" name="email" placeholder="Correo Electrónico" required>
-        <input type="tel" name="telefono" placeholder="Teléfono" required>
-        <input type="password" name="password" placeholder="Contraseña" required>
-        <input type="password" name="repetir_password" placeholder="Repetir Contraseña" required>
+    <form action="/registro_clientes" method="POST">
+        <input type="text" name="nombre" placeholder="Nombre" required autocomplete="off">
+        <input type="email" name="email" placeholder="Correo Electrónico" required autocomplete="off">
+        <input type="tel" name="telefono" placeholder="Teléfono" required autocomplete="off">
+        <input type="password" name="password" placeholder="Contraseña" required autocomplete="off">
+        <input type="password" name="repetir_password" placeholder="Repetir Contraseña" required autocomplete="off">
         <button type="submit" class="button">Registrarse</button>
     </form>
 </body>
 </html>
+
+
