--- a/templates/login_clientes.html
+++ b/templates/login_clientes.html
@@ -65,14 +65,16 @@
 </head>
 <body>
     <h1>Inicio de Sesión</h1>
-    <form action="/login_clientes" method="POST">
-        <input type="email" name="email" placeholder="Correo Electrónico" required autocomplete="off">
-        <input type="password" name="password" placeholder="Contraseña" required autocomplete="off">
+    <form action="/login_clientes" method="POST" autocomplete="off">
+        <input type="email" name="email" placeholder="Correo Electrónico" required autocomplete="new-email">
+        <input type="password" name="password" placeholder="Contraseña" required autocomplete="new-password">
         <button type="submit" class="button">Iniciar Sesión</button>
         <a href="/registro_clientes"><p>Si no tienes cuenta, regístrate</p></a>
     </form>
 </body>
 </html>
+
+
 
 
 
