--- a/templates/registro_clientes.html
+++ b/templates/registro_clientes.html
@@ -43,15 +43,16 @@
 </head>
 <body>
     <h1>Registro de Cliente</h1>
-    <form action="/registro_clientes" method="POST">
-        <input type="text" name="nombre" placeholder="Nombre" required autocomplete="off">
-        <input type="email" name="email" placeholder="Correo Electrónico" required autocomplete="off">
-        <input type="tel" name="telefono" placeholder="Teléfono" required autocomplete="off">
-        <input type="password" name="password" placeholder="Contraseña" required autocomplete="off">
-        <input type="password" name="repetir_password" placeholder="Repetir Contraseña" required autocomplete="off">
+    <form action="/registro_clientes" method="POST" autocomplete="off">
+        <input type="text" name="nombre" placeholder="Nombre" required autocomplete="new-name">
+        <input type="email" name="email" placeholder="Correo Electrónico" required autocomplete="new-email">
+        <input type="tel" name="telefono" placeholder="Teléfono" required autocomplete="new-tel">
+        <input type="password" name="password" placeholder="Contraseña" required autocomplete="new-password">
+        <input type="password" name="repetir_password" placeholder="Repetir Contraseña" required autocomplete="new-password">
         <button type="submit" class="button">Registrarse</button>
     </form>
 </body>
 </html>
+
 
 
