cambios de loginy resgister

--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
         <h1>CheckAndFood</h1>
         <div class="button-container">
             <button class="button" onclick="location.href='/clientes'">Clientes</button>
-            <button class="button" onclick="location.href='/restaurantes'">Restaurantes</button>
+            <button class="button" onclick="location.href='/login_restaurant'">Restaurantes</button>
         </div>
     </body>
     </html>
