--- a/templates/manage_reservations.html
+++ b/templates/manage_reservations.html
@@ -51,6 +51,9 @@
         label {
             font-size: 16px;
             margin-bottom: 5px;
+            color: black;
+            font-weight: bold;
+            text-align: center;
         }
 
         input {
