agregado boton de back

--- a/templates/register_restaurant.html
+++ b/templates/register_restaurant.html
@@ -101,7 +101,14 @@
         <label for="capacity">Nº commensals</label>
         <input type="number" name="capacity" id="capacity" required>
         <button type="submit">Register</button>
+      
     </form>
+    <br><br>
+    <a href="{{ url_for('restaurantes') }}"><button type="submit">Back</button></a>
+        
+     
+
+   
 </body>
 </html>
 
