--- a/static/css/login_restaurant.css
+++ b/static/css/login_restaurant.css
@@ -63,3 +63,7 @@ form[action="/register"] button {
 form[action="/register"] button:hover {
     background-color: #0056b3;
 }
+
+.btnBackRegister {
+    background-color: rgb(23, 110, 23) !important;
+}
