falta cerrar sesion

--- a/templates/manage_reservations.html
+++ b/templates/manage_reservations.html
@@ -9,14 +9,17 @@
 </head>
 
 <body>
-    
-    <h1>Gestión del Restaurante</h1>
 
-    <!-- Formulario para actualizar la capacidad -->
+   <nav>
+    <h1>Gestión del Restaurante</h1>
     <h2>Capacidad del Restaurante</h2>
+    <input type="number" name="capacity" value="{{ capacity.capacity }}" required>
+    <!-- button cerrar sesion-->
     
-       
-        <input type="number" name="capacity" value="{{ capacity.capacity }}" required>
+        <a href=""></a><button type="submit">Cerrar Sesión</button>
+    
+   </nav>
+    
         
     
 
