--- a/templates/login_clientes.html
+++ b/templates/login_clientes.html
@@ -91,17 +91,20 @@
 
     </form>
 
+
+    
     <!-- Iconos decorativos -->
     <div class="iconos-comida">
         <img src="https://img.icons8.com/color/96/000000/pizza.png" alt="Pizza" class="icono">
         <img src="https://img.icons8.com/color/96/000000/hamburger.png" alt="Hamburguesa" class="icono">
-        <img src="https://img.icons
+ 
+    </div>
 
+    <h1 style="color: red;">{{ mensaje }}</h1>
 
-
-
-
-
+   </body>
+    
+</html> 
 
 
 
