--- a/templates/registro_clientes.html
+++ b/templates/registro_clientes.html
@@ -95,6 +95,9 @@
         <img src="https://img.icons8.com/color/96/000000/salad.png" alt="Ensalada" class="icono">
         <img src="https://img.icons8.com/color/96/000000/sushi.png" alt="Sushi" class="icono">
     </div>
+
+    <div><a href="/"><h3 style="color: blue;">HOME</h3></a></div>
+
 </body>
 </html>
 
