--- a/templates/login_clientes.html
+++ b/templates/login_clientes.html
@@ -102,6 +102,8 @@
 
     <h1 style="color: red;">{{ mensaje }}</h1>
 
+    <div><a href="/"><h3 style="color: blue;">HOME</h3></a></div>
+
    </body>
     
 </html> 
