--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -54,7 +54,7 @@
         <!-- Campos adicionales: fecha y número de comensales -->
         <div id="campos-reserva">
             <label for="fecha">Fecha de la Reserva:</label>
-            <input type="date" id="fecha" name="fecha" required>
+            <input type="datetime-local" id="fecha" name="fecha" required>
     
             <label for="comensales">Número de Comensales:</label>
             <input type="number" id="comensales" name="comensales" min="1" required>
